<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:background="#E8EAF6"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:layout_gravity="center_horizontal"
    tools:context="pl.redacto.quiz.MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:background="@drawable/back"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/question_no_1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/q1_text"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textSize="16sp"
                    android:text="@string/q1_a_answer" />
                <RadioButton
                    android:id="@+id/b1"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/q1_b_answer" />
                <RadioButton
                    android:id="@+id/c1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/q1_c_answer"
                    android:textSize="16sp" />
                <RadioButton
                    android:id="@+id/d1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textSize="16sp"
                    android:text="@string/q1_d_answer" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:background="@drawable/back"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/question_no_2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/q2_text"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textSize="16sp"
                    android:text="@string/q2_a_answer" />
                <RadioButton
                    android:id="@+id/b2"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/q2_b_answer"  />
                <RadioButton
                    android:id="@+id/c2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/q2_c_answer"
                    android:textSize="16sp" />
                <RadioButton
                    android:id="@+id/d2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textSize="16sp"
                    android:text="@string/q2_d_answer" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:background="@drawable/back"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/question_no_3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/q3_text"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:id="@+id/transcription_q"
                android:hint="@string/q3_hint"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:background="@drawable/back"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/question_no_4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/q4_text"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textSize="16sp"
                    android:text="@string/q4_a_answer" />
                <RadioButton
                    android:id="@+id/b4"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/q4_b_answer" />
                <RadioButton
                    android:id="@+id/c4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/q4_c_answer"
                    android:textSize="16sp" />
                <RadioButton
                    android:id="@+id/d4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textSize="16sp"
                    android:text="@string/q4_d_answer" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:background="@drawable/back"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/question_no_5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/q5_text"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingBottom="16dp"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/a5"
                    android:paddingTop="8dp"
                    android:textSize="16sp"
                    android:text="@string/q5_a_answer"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/b5"
                    android:paddingTop="8dp"
                    android:textSize="16sp"
                    android:text="@string/q5_b_answer"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/c5"
                    android:paddingTop="8dp"
                    android:textSize="16sp"
                    android:text="@string/q5_c_answer"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/d5"
                    android:paddingTop="8dp"
                    android:textSize="16sp"
                    android:text="@string/q5_d_answer"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:background="@drawable/back"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/question_no_6" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/q6_text"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/a6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textSize="16sp"
                    android:text="@string/q6_a_answer" />
                <RadioButton
                    android:id="@+id/b6"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/q6_b_answer"
                    />
            </RadioGroup>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginBottom="16dp"
            android:onClick="displayResult"/>
        <TextView
            android:background="@drawable/back"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answers"
            android:textSize="12sp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/answers"/>
    </LinearLayout>
</ScrollView>